Add package.json to aid builds

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@ var producer = new kafka.Producer({topic:'hamlet'}).connect(function() {
 </pre>
 </section>
 
-<section>
-<h1>What happens when you crank on this for a while...</h1>
+<section class="slide">
+<h2>http://github.com/byronellis/strata2013</h2>
 </section>
 
 <!-- Required Modernizr file -->
